# Curso-Completo-de-Rust-Fundamentos

./: Cargo.toml  README.md  TUTORIAIS.md
modulo-01-fundamentos-rust/: README.md
modulo-01-fundamentos-rust/exemplos/: controle_fluxo.rs  funcoes.rs  tipos_dados.rs  variaveis.rs
modulo-01-fundamentos-rust/exemplos/calculadora/src/: calculadora.rs  main.rs  operacoes.rs
modulo-02-ownership-borrowing/: README.md
modulo-02-ownership-borrowing/exemplos/: borrowing.rs  ownership_basico.rs  slices.rs
modulo-03-structs-enums/: README.md
modulo-03-structs-enums/exemplos/: enums.rs  pattern_matching.rs  structs_basicos.rs
modulo-04-collections-iterators/: README.md
modulo-04-collections-iterators/exemplos/: vec_examples.rs
modulo-05-error-handling/: README.md
modulo-06-concorrencia/: README.md
modulo-07-traits-generics/: README.md
modulo-08-lifetimes-advanced/: README.md
modulo-09-cargo-crates/: README.md
modulo-10-projetos-praticos/: README.md
modulo-embarcados/: README.md
modulo-embarcados/exemplos/: arduino_blink.rs  esp32_wifi.rs  raspberry_pi_gpio.rs
